# nexerra-r1

./: .gitignore  LICENSE.md  README.md  environment.yml  setup.py  setup_assets.py
data/analysis/: heavy_atoms.txt  nn_similarity_samples.txt  nn_similarity_stats.txt  rotatable_bonds.txt  scaffold_stats.txt  similarity_samples.txt  similarity_stats.txt
data/processed/: id2tok.json  idx2token.pt  test_smiles.txt  tok2id.json  token2idx.pt  val_smiles.txt
designed/linker/: README.md  inference_config.txt  sample_input.txt
designed/reference/: CU-525.cif
nexerra/cfm/: build_bank.py  eval_utils.py  otcfm_trainer.py
nexerra/inference/: Design.py  Reward.py  (+2 more)
nexerra/inference/bio/: pyproject.toml  readme.md
nexerra/inference/bio/data/processed/: drug_tox_fragments.csv  drug_tox_space.json  drug_tox_space.provenance.json  reward_context_stats.json
nexerra/inference/bio/data/raw/: Acute Toxicity_mouse_intravenous_LD50_with_units.csv  MOF_metal_toxicity.csv
nexerra/inference/bio/notebooks/: 01_reward_pipeline.ipynb
nexerra/inference/bio/reports/: Section F - Reward Functions.docx
nexerra/inference/bio/scripts/: build_acute_tox_labeled.py  build_drug_tox_space.py  classify_acute_tox_ghs.py  extract_rdkit_features.py  optimize_reward_weights_bayes.py  score_bio_reward_batch.py  score_bio_reward_smiles.py  smoke_test.py
nexerra/inference/bio/src/: MOF_bio_reward.py  __init__.py  constants.py  data_loading.py  drug_tox_space.py  feature_extraction.py  metal_toxicity.py  mof_processing.py  rdkit_features.py  toxicity_classification.py  toxicity_data.py  utils.py
(+724 files in other folders)
